--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,12 +27,14 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  bloc: ^8.0.1
   carousel_slider: ^4.0.0
   cloud_firestore: ^3.1.5
   cupertino_icons: ^1.0.2
   firebase_core: ^1.10.6
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.0.0
 
 dev_dependencies:
   flutter_lints: ^1.0.0
