--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.0
+  google_fonts: ^2.1.0
+  palette_generator: ^0.3.2
 
 dev_dependencies:
   flutter_lints: ^1.0.0
@@ -65,16 +67,29 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   # fonts:
-  #   - family: Schyler
+  #   - family: Nunito
   #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
+  #       - asset: fonts/Nunito-ExtraLight.ttf
+  #         weight: 200
+  #       - asset: fonts/Nunito-Light.ttf
+  #         weight: 300
+  #       - asset: fonts/Nunito-Regular.ttf
+  #         weight: 400
+  #       - asset: fonts/Nunito-Medium.ttf
+  #         weight: 500
+  #       - asset: fonts/Nunito-Bold.ttf
   #         weight: 700
+  #       - asset: fonts/Nunito-ExtraBold.ttf
+  #         weight: 800
+  #       - asset: fonts/Nunito-Black.ttf
+  #         weight: 900
+  #   - family: Noto Sans
+  #     fonts:
+  #       - asset: fonts/NotoSans-Regular.ttf
+  #         weight: 400
+  #       - asset: fonts/NotoSans-Bold.ttf
+  #         weight: 700
+
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
