--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.0.0
   google_fonts: ^2.1.0
+  material_floating_search_bar: ^0.3.6
   palette_generator: ^0.3.2
 
 dev_dependencies:
@@ -89,7 +90,6 @@ flutter:
   #         weight: 400
   #       - asset: fonts/NotoSans-Bold.ttf
   #         weight: 700
-
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
