--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_storage: ^10.2.4
   flutter_dotenv: ^5.0.2
   flutterfire_ui: ^0.3.0
+  assets_audio_player: ^3.0.3+9
 
 dev_dependencies:
   flutter_lints: ^1.0.0
