--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_dotenv: ^5.0.2
   flutterfire_ui: ^0.3.0
   assets_audio_player: ^3.0.3+9
+  percent_indicator: ^4.0.0
 
 dev_dependencies:
   flutter_lints: ^1.0.0
